<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.miwok.MainActivityGerman"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tan_background"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/numbers"
            style="@style/CategoryStyle"
            android:background="@color/category_numbers"
            android:text="@string/category_numbers" />



        <TextView
            android:id="@+id/family"
            style="@style/CategoryStyle"
            android:background="@color/category_family"
            android:text="@string/category_family"
            />


        <TextView
            android:id="@+id/colors"
            style="@style/CategoryStyle"
            android:background="@color/category_colors"
            android:text="@string/category_colors"
            />

        <TextView
            android:id="@+id/phrases"
            style="@style/CategoryStyle"
            android:background="@color/category_phrases"
            android:text="@string/category_phrases"
            />

        <TextView
            android:id="@+id/weeks"
            style="@style/CategoryStyle"
            android:background="@color/category_weeks"
            android:text="@string/category_weeks"
            />

        <TextView
            android:id="@+id/months"
            style="@style/CategoryStyle"
            android:background="@color/category_months"
            android:text="@string/category_months"
            />

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/icon1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@drawable/germany"


                />
            <ImageView
                android:id="@+id/icon2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@drawable/mapofgermany"
                android:onClick="openWebpage"

                />
            <ImageView
                android:id="@+id/icon3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@drawable/germany3"

                />
        </ViewFlipper>
    </LinearLayout>
</ScrollView>